<resources>
    <string name="app_name">RizkyIlmanN_Challange4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Profile</string>
    <string name="text_hai">Halo Rizky ! ,</string>
    <string name="text_maumakan">Mau makan apa hari ini?</string>
    <string name="text_discount">Discount 50% !</string>
    <string name="text_pesan_makanan">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="text_menu_atas_1">Nasi</string>
    <string name="text_menu_2">Junk Food</string>
    <string name="text_menu_3">Minuman</string>
    <string name="text_menu_4">Dessert</string>
    <string name="tv_list_menu_bawah">! PAKET HEMAT PASTI KENYANG !</string>
    <string name="tv_menu_bawah1">Nasi Goreng Jawa</string>
    <string name="tv_menu_diskon2">Mie Goreng Pedas</string>
    <string name="text_harga">Rp. 15000</string>
    <string name="text_totaldiskon">= Rp. 25000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_list_makanan">List Makanan</string>
    <string name="text_menu_burger">Burger</string>
    <string name="text_price">Rp 20.000</string>
    <string name="text_desc_burger">Perpaduan roti bun dengan daging ham yang telah dibumbui yang menciptakan cita rasa nikmat!</string>
    <string name="text_lokasi">Lokasi</string>
    <string name="tv_lokasi_detail">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_btn_maps">Maps Navigation</string>
    <string name="text_your_cart">Your Cart</string>
    <string name="tv_add_to_cart">Add to cart</string>
    <string name="text_checkout">Checkout</string>
    <string name="tv_nama_profile">NAMA</string>
    <string name="tv_email_profile">EMAIL</string>
    <string name="text_nomortelepon">No. Telephone</string>
    <string name="tv_total_price_cart">Total Price</string>
    <string name="tv_name_product">Nama Product</string>
    <string name="quantity_total">x%s</string>
    <string name="text_empty_cart">Cart is Empty</string>
    <string name="text_confirm_order">Confirmation Order</string>
    <string name="text_button_order">Pesan</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_pickup">Pick Up</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_okay">Okay !</string>
</resources>