<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow1"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hai_binarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/harvestbailey"
            android:text="@string/text_hai"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/harvestbailey"
            android:text="@string/text_maumakan"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hai_binarian" />

        <ImageView
            android:id="@+id/iv_cart_icon"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:src="@drawable/cart"
            app:layout_constraintStart_toEndOf="@id/tv_hai_binarian"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteY="3dp" />

        <ImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:src="@drawable/user"
            app:layout_constraintStart_toEndOf="@id/iv_cart_icon"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteY="3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/banner_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/banner2"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@color/black" />

            <ImageView
                android:id="@+id/iv_discount"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/discount2"
                app:layout_constraintStart_toStartOf="@id/banner_view"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_discount"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/text_discount"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/iv_discount"
                app:layout_constraintTop_toTopOf="@id/iv_discount" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"

                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:ellipsize="none"
                android:fontFamily="sans-serif"
                android:text="@string/text_pesan_makanan"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/iv_discount"
                app:layout_constraintTop_toBottomOf="@id/tv_discount" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/cv_banner"
        tools:listitem="@layout/item_category_linear" />

    <include
        android:id="@+id/layout_state_category"
        layout="@layout/common_layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/cv_banner"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_category"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toTopOf="@id/nav_view"/>

    <include
        android:id="@+id/layout_state_product"
        layout="@layout/common_layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        app:layout_constraintBottom_toTopOf="@id/nav_view"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>